fixed buttons on map screen to remove scrollbars

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,10 @@ button > i {
   pointer-events: none;
 } 
 
+a {
+  
+  text-decoration: none;
+}
 
 .cards-wrapper {
   display: flex;
